[workspace]
resolver = "3"
members = [
  "jap",
  "send",
  "recv"
]

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["net", "full"] }
anyhow = { version = "1.0" }
postcard = { version = "1.1.3", features = [ "experimental-derive" ] }
heapless  = { version = "0.9.3" }
btree-range-map = "0.7.2"
