[package]
name = "jap"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
postcard = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
heapless  = { workspace = true }
rand = "0.10.1"
btree-range-map.workspace = true
derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
